restructuring of essential points according to telcon 2014-02-26

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -657,31 +657,26 @@ The reader is encouraged to report any technical or editing issues/problems with
 \chapter{Scope}
 \ednote{compare the scope in 6.2 of the RFP}
 \pagenumbering{arabic} 
-This \IS specifies the Distributed Ontology, Modeling and Specification Language (DOL) designed to achieve integration and interoperability of ontologies, specifications and models (OSMs for short). DOL is a language for distributed knowledge representation across multiple OSMs, particularly OSMs that have been formalized in different OSM languages\ednote{maybe: ``logical languages'' instead
-of ``OSM languages''?}.
+This \IS specifies the Distributed Ontology, Modeling and Specification Language (DOL) designed to achieve integration and interoperability of ontologies, specifications and models (OSMs for short). DOL is a language for distributed knowledge representation across multiple OSMs, particularly OSMs that have been formalized in different OSM languages.
 
-The following features are essential to the design of this \IS
-\CLnote{[date=D:201110060000+02'00']Proposal for restructuring this (due to Michael Gr{\"u}ninger):
-\textLF
-\begin{enumerate}
-\item heterogeneity
-\item modularity
-\begin{enumerate}
-\item writing structured OSMs
-\begin{enumerate}
-\item reuse existing OSMs
-\item write structured OSMs
-\end{enumerate}
-\item writing OSMs that have multiple parts
-\end{enumerate}
-\item mappings (or should we say ``links'')
-\item annotation
-\end{enumerate}
-}:
+DOL does not provide a new elementary OSM language, but provides a
+layer to be used on top of existing elementary OSM languages which
+enables OSM engineers to formally express links between OSMs written
+in different languages and stored at different Web locations. The
+purpose of such distributed OSMs is enabling a greater extent of
+interoperability between data and services in complex application
+settings.
+
+The following features are essential to the design of this \IS:
 
 \begin{itemize}
-\item DOL is a declarative language with a formal semantics for modular OSMs that consist of structured OSMs that are possibly heterogeneous, i.e.\ are written within the same or in different OSM languages, and made available at different Web locations.
-\item DOL provides a superset of the modularization and annotation facilities of a number of commonly used OSM languages, including OWL \nitem{W3C/TR REC-owl2-syntax:2009} and Common Logic \nitem{ISO/IEC 24707:2007}\footnote{See \cref{c:req:extensible} for details.}.
+\item DOL is a language covering OMS modularity, OMS heterogeneity, and
+OMS mapping. In particular, it enables writing structured OSMs
+(thereby reusing existing OSMs), OSMs involving different languages,
+as well as complex mappings and relations between OSMs.
+\item DOL is a declarative language with a formal semantics.
+% for modular OSMs that consist of structured OSMs that are possibly heterogeneous, i.e.\ are written within the same or in different OSM languages, and made available at different Web locations.
+\item DOL provides a superset of the modularization, Web awareness and annotation facilities of a number of commonly used OSM languages, including OWL \nitem{W3C/TR REC-owl2-syntax:2009}, RDF\ednote{reference needed}, Common Logic \nitem{ISO/IEC 24707:2007} and UML\ednote{reference needed}\footnote{See \cref{c:req:extensible} for details.}.
 \item DOL is an open, extensible standard that is not restricted to a fixed set of supported OSM language but specifies criteria for any existing or future OSM language to conform with DOL.
 \item Existing OSMs in languages conforming with DOL remain as they are; they can be enriched with DOL's modularity and annotation constructs in a non-disruptive way.
 \end{itemize}
@@ -693,7 +688,7 @@ The following are within the scope of this \IS:
 \item links between distributed and heterogeneous (possibly structured) OSMs
 \item\label{it:scope-annotation} annotation and documentation of OSMs, links between OSMs, symbols,
 and sentences
-\item \label{it:scope-translation} translations between different OSM languages
+\item \label{it:scope-translation} translations between different OSM languages conformant with DOL
 \item recommendations of vocabularies for annotating and documenting OSMs
 \item a syntax for embedding the constructs mentioned under (\ref{it:scope-heterogeneous})–(\ref{it:scope-annotation}) as annotations into existing OSMs
 \item a syntax for expressing (\ref{it:scope-heterogeneous})–(\ref{it:scope-translation}) as standoff markup that points into existing OSMs
@@ -715,7 +710,9 @@ stating sentences about them
 \item mappings between services and devices, and definitions of service and device interoperability.
 \end{enumerate}
 
-This \IS describes the syntax and the semantics of the Distributed Ontology, Modeling and Specification Language (DOL) by defining an abstract syntax and an associated model-theoretic semantics for DOL. DOL does not provide a new elementary OSM language, but provides a layer to be used on top of existing elementary OSM languages which enables OSM engineers to formally express links between OSMs written in different languages and stored at different Web locations. The purpose of such distributed OSMs is enabling a greater extent of interoperability between data and services in complex application settings.
+This \IS describes the syntax and the semantics of the Distributed Ontology, Modeling and Specification Language (DOL) by defining an abstract syntax and an associated model-theoretic semantics for DOL. 
+
+\end{document}
 
 \chapter{Conformance}
 
