somre more points according to telcon 2014-02-26

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -657,7 +657,7 @@ The reader is encouraged to report any technical or editing issues/problems with
 \chapter{Scope}
 \ednote{compare the scope in 6.2 of the RFP}
 \pagenumbering{arabic} 
-This \IS specifies the Distributed Ontology, Modeling and Specification Language (DOL) designed to achieve integration and interoperability of ontologies, specifications and models (OMSs for short). DOL is a language for distributed knowledge representation across multiple OMSs, particularly OMSs that have been formalized in different OMS languages.
+This \IS specifies the Distributed Ontology, Modeling and Specification Language (DOL) designed to achieve integration and interoperability of ontologies, specifications and models (OMSs for short). DOL is a language for distributed knowledge representation across multiple OMSs, particularly OMSs that have been formalized in different OMS languages.\ednote{we should say that we answer to the RFP --- see other OMG specs on how doing this}
 
 DOL does not provide a new elementary OMS language, but provides a
 layer to be used on top of existing elementary OMS languages which
@@ -685,10 +685,11 @@ as well as complex mappings and relations between OMSs.
 The following are within the scope of this \IS:
 \begin{enumerate}
 \item\label{it:scope-heterogeneous} heterogeneous OMSs that combine parts written in different languages
-\item links between distributed and heterogeneous (possibly structured) OMSs
+\item links between (possibly structured and/or heterogeneous) OMSs (mapping
+OMS symbols to OMS symbols)
+\item \label{it:scope-translation} translations between different OMS languages conformant with DOL (translating whole OMSs to another language)
 \item\label{it:scope-annotation} annotation and documentation of OMSs, links between OMSs, symbols,
 and sentences
-\item \label{it:scope-translation} translations between different OMS languages conformant with DOL
 \item recommendations of vocabularies for annotating and documenting OMSs
 \item a syntax for embedding the constructs mentioned under (\ref{it:scope-heterogeneous})–(\ref{it:scope-annotation}) as annotations into existing OMSs
 \item a syntax for expressing (\ref{it:scope-heterogeneous})–(\ref{it:scope-translation}) as standoff markup that points into existing OMSs
@@ -712,7 +713,6 @@ stating sentences about them
 
 This \IS describes the syntax and the semantics of the Distributed Ontology, Modeling and Specification Language (DOL) by defining an abstract syntax and an associated model-theoretic semantics for DOL. 
 
-\end{document}
 
 \chapter{Conformance}
 
@@ -1490,6 +1490,8 @@ Within the DOL framework, existing OMSs in conforming established languages such
 %%%%%%%%%%%%%%%% 
 %%%%%%%%%%%%%%%% 
 \chapter{Requirements and design overview}
+
+\ednote{replace this section by saying how we respond to the RFP}
 
 \CLnote[type=todo]{Get rid of formal \should/\shall language (e.g.\ in clause headers: \should/\shall applies to conforming implementations anyway, rather than to this standard itself!) – not necessary in an informative clause. TM: I did this in the clause headings, and for the design part also in the clause texts.}
 
@@ -3727,6 +3729,8 @@ We will give (as normative annexes) one such environment.  These will
 define the ``default translations'' that we assume.
 
 \infannex{Example Uses of all DOL Constructs}
+
+\ednote{the uses cases in the RFP should be reused and worked into DOL examples}
 
 \CLnote[type=q-aut]{Should we have another column here that refers to the \emph{abstract} syntax?}%
 \begin{tabular}{|l|l|}\hline
